--- a/package.json
+++ b/package.json
@@ -9,6 +9,15 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.1.2"
+    "@astrojs/react": "^4.1.3",
+    "@types/react": "^19.0.4",
+    "@types/react-dom": "^19.0.2",
+    "astro": "^5.1.2",
+    "axios": "^1.7.9",
+    "dotenv": "^16.4.7",
+    "leaflet": "^1.9.4",
+    "leaflet-routing-machine": "^3.2.12",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1"
   }
 }
